finished footer and added hover styles

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -18,4 +18,8 @@ const { cta } = Astro.props;
     font-family: "Raleway", sans-serif;
     font-size: 14px;
   }
+
+  button:hover {
+    background-image: linear-gradient(170deg, #72c5d2, #56a1c9);
+  }
 </style>
