--- a/public/styles.css
+++ b/public/styles.css
@@ -3,3 +3,4 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import "./custom-tailwind.css";
+@import "@fortawesome/fontawesome-free/css/all.css";
