--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,11 @@ const { title } = Astro.props;
 
 import "@fontsource/open-sans";
 import "@fontsource/raleway/700.css";
-import emailIcon from "./email-icon.png";
+import emailIcon from "../../public/images/icon-email.svg";
+import phoneIcon from "../../public/images/icon-phone.svg";
+import twitterIcon from "../../public/images/icon-twitter.png";
+import facebookIcon from "../../public/images/icon-facebook.png";
+import instagramIcon from "../../public/images/icon-instagram.png";
 ---
 
 <!DOCTYPE html>
@@ -37,7 +41,9 @@ import emailIcon from "./email-icon.png";
           <ul
             class="menu menu-horizontal text-xs md:text-base lg:text-lg md:px-1 md:gap-6 lg:gap-12"
           >
-            <li><a>Features</a></li>
+            <li>
+              <a>Features</a>
+            </li>
             <li><a>Team</a></li>
             <li><a>Sign In</a></li>
           </ul>
@@ -46,38 +52,36 @@ import emailIcon from "./email-icon.png";
       <slot />
     </main>
 
-    <footer class="bg-[#0B1524] py-6 pt-64">
-      <div class="container mx-auto px-4">
-        <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+    <footer class="bg-[#0B1524] pt-64 pb-32">
+      <div class="container mx-auto px-16 md:px-20">
+        <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-8 gap-16">
           <!-- Column 1 -->
-          <div class="md:col-span-3 md:col-start-1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="md:col-span-1 xl:col-span-3">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
           </div>
 
           <!-- Column 2 -->
-          <div class="md:col-span-3 md:col-start-4 flex flex-col gap-4">
-            <div class="flex flex-row gap-4">
+          <div class="md:col-span-1 xl:col-span-2 flex flex-col gap-4">
+            <div class="flex flex-row items-center gap-3">
               <div class="flex justify-center">
-                <img src="phone-icon.png" alt="Phone Icon" class="h-4 w-4">
+                <img src={phoneIcon} alt="Phone Icon" />
               </div>
-              <div>
-                +1-543-123-4567
-              </div>
+              <div>+1-543-123-4567</div>
             </div>
-            <div class="flex flex-row items-center gap-4">
+            <div class="flex flex-row items-center gap-3">
               <div class="items-center justify-center">
-                <img src={emailIcon} alt="Email Icon" class="h-4 w-4">
+                <img src={emailIcon} alt="Email Icon" />
               </div>
-              <div>
-                example@fylo.com
-              </div>
+              <div>example@fylo.com</div>
             </div>
           </div>
 
-
           <!-- Column 3 -->
-          <div class="md:col-span-2 md:col-start-7">
-            <ul>
+          <div class="xl:col-span-1">
+            <ul class="flex flex-col gap-4">
               <li><a href="#">About Us</a></li>
               <li><a href="#">Jobs</a></li>
               <li><a href="#">Press</a></li>
@@ -86,8 +90,8 @@ import emailIcon from "./email-icon.png";
           </div>
 
           <!-- Column 4 -->
-          <div class="md:col-span-2 md:col-start-9">
-            <ul>
+          <div class="xl:col-span-1">
+            <ul class="flex flex-col gap-4">
               <li><a href="#">Contact Us</a></li>
               <li><a href="#">Terms</a></li>
               <li><a href="#">Privacy</a></li>
@@ -95,31 +99,20 @@ import emailIcon from "./email-icon.png";
           </div>
 
           <!-- Column 5 -->
-          <div class="md:col-span-2 md:col-start-11">
-            <div class="flex">
-              <div class="mr-4">
-                <img src="icon1.png" alt="Icon 1" class="h-6 w-6">
-              </div>
-              <div class="mr-4">
-                <img src="icon2.png" alt="Icon 2" class="h-6 w-6">
-              </div>
-              <div>
-                <img src="icon3.png" alt="Icon 3" class="h-6 w-6">
-              </div>
+          <div class="xl:col-span-1 flex flex-col md:flex-row gap-2">
+            <div>
+              <img class="w-1/12 md:w-1/2 xl:w-auto" src={twitterIcon} />
+            </div>
+            <div>
+              <img class="w-1/12 md:w-1/2 xl:w-auto" src={facebookIcon} />
+            </div>
+            <div>
+              <img class="w-1/12 md:w-1/2 xl:w-auto" src={instagramIcon} />
             </div>
           </div>
         </div>
       </div>
     </footer>
-
-
-
-
-
-
-
-
-
   </body>
 </html>
 
@@ -181,10 +174,20 @@ import emailIcon from "./email-icon.png";
     text-decoration: underline;
     text-underline-offset: 0.6em;
   }
-  .navbar{
-    z-index: 100
+  .navbar {
+    z-index: 100;
   }
 
+  a:hover {
+    font-weight: 800;
+    text-decoration: underline;
+    background-color: transparent !important;
+    color: white;
+  }
+
+  .navbar .menu li:hover {
+    background-color: transparent !important;
+  }
 
   @media screen and (max-width: 767px) {
     h1 {
