fixed text not showing up in input

--- a/src/components/SignUp.astro
+++ b/src/components/SignUp.astro
@@ -2,7 +2,9 @@
 import Button from "../components/Button.astro";
 ---
 
-<div class="signup rounded-sm max-w-4xl py-12 px-8 md:px-16 flex flex-col items-center gap-6">
+<div
+  class="signup rounded-sm max-w-4xl py-12 px-8 md:px-16 flex flex-col items-center gap-6"
+>
   <h3 class="">Get early access today</h3>
   <p class="text-center">
     It only takes a minute to sign up and our free starter tier is extremely
@@ -13,7 +15,7 @@ import Button from "../components/Button.astro";
     <div class="lg:w-2/3">
       <input
         type="text"
-        class="rounded-full px-4 py-2 bg-white w-full"
+        class="rounded-full px-4 py-2 bg-white w-full text-gray-900"
         placeholder="email@example.com"
       />
     </div>
