fix for white background on safari

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -136,7 +136,7 @@ import logo from "../../public/images/logo.svg";
   }
 
   body {
-    color: #ffffff;
+    color: #f6f6f6;
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
