--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ import logo from "../../public/images/logo.svg";
   <body>
     <main class="p-0 flex flex-col">
       <div
-        class="flex justify-center navbar py-4 px-4 bg-base-100 sticky top-0 w-full"
+        class="flex justify-center navbar py-4 px-4 bg-base-100 nav-color sticky top-0 w-full"
       >
         <div class="max-w-6xl flex justify-between items-center w-full">
           <div class="h-full">
@@ -181,6 +181,7 @@ import logo from "../../public/images/logo.svg";
   }
   .navbar {
     z-index: 100;
+    background-color: #2b303b;
   }
 
   a:hover {
